prusti-tests/tests/runtime_checks/pass/assert-assume-invariant/sanity.rs
//@run
use prusti_contracts::*;

fn main() {
    prusti_assume!(true);
    prusti_assert!(true);
}
